1.8.3
        fixed issue between connect_and_read.pl and
          Aironet
          (http://www.packetfence.org/mantis/view.php?id=692)
        fixed iptables generation with multiple internal
          interfaces
          (http://www.packetfence.org/mantis/view.php?id=693)

1.8.2
        added Readonly to dependencies
          (http://www.packetfence.org/mantis/view.php?id=608)
        added missing header.selected.png
          (http://www.packetfence.org/mantis/view.php?id=609)
        date initialization in locationhistorymac command
          (http://www.packetfence.org/mantis/view.php?id=610)
        removed core perl modules from dependency lists
          (http://www.packetfence.org/mantis/view.php?id=613)
        fixed SNMPv3 createUser command
          (http://www.packetfence.org/mantis/view.php?id=612)
        fixed Web Admin GUI - violation add
          (http://www.packetfence.org/mantis/view.php?id=615)
        fixed configurator walkthrough in ZEN installation guide
          (http://www.packetfence.org/mantis/view.php?id=618)
        fixed pf.conf example in ZEN installation guide
          (http://www.packetfence.org/mantis/view.php?id=619)
        fixed comments in BIND zone file templates
          (http://www.packetfence.org/mantis/view.php?id=617)
        ifconfig -a and non-english installations
          (http://www.packetfence.org/mantis/view.php?id=614)
        removed unused icons from distribution
          (http://www.packetfence.org/mantis/view.php?id=621)
        removed unnecessary files from web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=622)
        fixed compilation error in bin/accounting.pl
          (http://www.packetfence.org/mantis/view.php?id=623)
        added tests for compilation of binaries
        fixed compilation error in addons/convertToPortSecurity.pl
          (http://www.packetfence.org/mantis/view.php?id=624)
        fixed list of dashboard widgets