@@ -51,7 +51,7 @@
     </tr>
     <tr>
       <td>End Date and Time (optional)</td>
-      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time">...</button> <?php show_calendar_with_button('end_time', 'button_time') ?></td>
+      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time1">...</button> <?php show_calendar_with_button('end_time', 'button_time1') ?></td>
     </tr>
     <tr>
       <td colspan="2" align="right"><input type="submit" value="Query History"></td>
@@ -174,7 +174,7 @@
     </tr>
     <tr>
       <td>End Date and Time (optional)</td>
-      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time">...</button> <?php show_calendar_with_button('end_time', 'button_time') ?></td>
+      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time1">...</button> <?php show_calendar_with_button('end_time', 'button_time1') ?></td>
     </tr>
     <tr>
       <td colspan="2" align="right"><input type="submit" value="Query IfOctets History"></td>
@@ -219,7 +219,7 @@
     </tr>
     <tr>
       <td>End Date and Time (optional)</td>
-      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time">...</button> <?php show_calendar_with_button('end_time', 'button_time') ?></td>
+      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time1">...</button> <?php show_calendar_with_button('end_time', 'button_time1') ?></td>
     </tr>
     <tr>
       <td colspan="2" align="right"><input type="submit" value="Query IfOctets History"></td>
@@ -262,7 +262,7 @@
     </tr>
     <tr>
       <td>End Date and Time (optional)</td>
-      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time">...</button> <?php show_calendar_with_button('end_time', 'button_time') ?></td>
+      <td><input id='end_time' name="end_time" value="<?=$_REQUEST['end_time']?>"><button type="reset" id="button_time1">...</button> <?php show_calendar_with_button('end_time', 'button_time1') ?></td>
     </tr>
     <tr>
       <td colspan="2" align="right"><input type="submit" value="Query IfOctets History"></td>
