@@ -5,6 +5,8 @@
         fixed iptables generation with multiple internal
           interfaces
           (http://www.packetfence.org/mantis/view.php?id=693)
+        fixed start date and end date in reports
+          (http://www.packetfence.org/mantis/view.php?id=694)
 
 1.8.2
         added Readonly to dependencies
